--- a/frontend/issueTracker/src/app/not-found/not-found.component.html
+++ b/frontend/issueTracker/src/app/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">404 (not found)</h1>
+      <p class="lead">Dear user , you are accessing a non existing path.</p>
+    </div>
+  </div>
