--- a/frontend/issueTracker/src/app/user/dashboard/dashboard.component.html
+++ b/frontend/issueTracker/src/app/user/dashboard/dashboard.component.html
@@ -8,30 +8,39 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
     <ul class="navbar-nav ">
       <li class="nav-item">
-        <a class="nav-link" (click)="filterbytitle()">Filter By Title</a>
+        <a class="nav-link" (click)="filterbytitle()">Filter By Title&nbsp;<i class="fa fa-filter"
+            aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="filterbystatus()">Filter By Status</a>
+        <a class="nav-link" (click)="filterbystatus()">Filter By Status&nbsp;<i class="fa fa-filter"
+            aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="  filterbydate()">Filter By Date</a>
+        <a class="nav-link" (click)="  filterbydate()">Filter By Date&nbsp;<i class="fa fa-filter"
+            aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="filterbyreporter()">Filter By Reporter</a>
+        <a class="nav-link" (click)="filterbyreporter()">Filter By Reporter &nbsp;<i class="fa fa-filter"
+            aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="setCreateIssueFlag()">Report Bug</a>
+        <a class="nav-link" (click)="setCreateIssueFlag()">Report Bug &nbsp;<i class="fa fa-bug"
+            aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="logout()">LogOut</a>
+        <a class="nav-link" (click)="notificationHistory()">Notification History &nbsp;<i class="fa fa-bell-o"
+            style="font-size:24px"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">LogOut &nbsp;<i class="fa fa-sign-out" aria-hidden="true"></i></a>
       </li>
     </ul>
   </div>
 </nav>
 
-<div class="container ">
+<div class="container" [hidden]="notifyFlag==true">
   <h1>Hi {{userName}} ! Welcome aboard.</h1>
-  <!-- <br> <br> -->
+
   <div class="input-group mb-3 mt-3">
     <div class="input-group-prepend">
       <button class="btn btn-outline-secondary" type="button" id="button-addon1" (click)="setSearchText()">Search Issues
@@ -39,16 +48,15 @@
     </div>
     <input type="text" class="form-control" [(ngModel)]="searchText">
   </div>
-  
+
 
   <div class="input-group mb-3 mt-3" *ngIf="ftitle||fstatus||freporter||fdate">
-    <!-- <div> -->
-      <div class="input-group-prepend" *ngIf="ftitle">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon1" (click)="filterIssues()">Filter Issues
-          By Title</button>
-      </div>
-    <!-- </div> -->
-    
+
+    <div class="input-group-prepend" *ngIf="ftitle">
+      <button class="btn btn-outline-secondary" type="button" id="button-addon1" (click)="filterIssues()">Filter Issues
+        By Title</button>
+    </div>
+
     <div class="input-group-prepend" *ngIf="fstatus">
       <button *ngIf="fstatus" class="btn btn-outline-secondary" type="button" id="button-addon1"
         (click)="filterIssues()">Filter Issues By Status</button>
@@ -66,35 +74,52 @@
         (click)="filterIssues()">Filter Issues By Date</button>
     </div>
     <input type="text" *ngIf="ftitle||fstatus||freporter" class="form-control" [(ngModel)]="filterText">
-    
+
     <input type="text" *ngIf="fdate" class="form-control" placeholder="Enter date in YYYY-MM-DD format"
       [(ngModel)]="filterText">
-      <i class="fa fa-window-close" *ngIf="ftitle||fstatus||freporter||fdate" (click)="close()" style="font-size:41px;"></i>
+    <i class="fa fa-window-close" *ngIf="ftitle||fstatus||freporter||fdate" (click)="close()"
+      style="font-size:41px;"></i>
   </div>
 
-  <!-- <br><br> -->
+
   <div class="table-responsive mt-3">
     <table class="table table-hover table-bordered">
       <thead class="thead-dark">
         <tr>
-          <th scope="col" (click)="sortByTitle()">Title <i class='fa fa-caret-square-o-down'></i></th>
-          <th scope="col" (click)="sortByStatus()">Status <i class='fa fa-caret-square-o-down'></i></th>
-          <th scope="col" (click)="sortByReporter()">Reporter <i class='fa fa-caret-square-o-down'></i></th>
-          <th scope="col" (click)="sortByDate()">Date <i class='fa fa-caret-square-o-down'></i></th>
+          <th scope="col" (click)="sortByTitle()">Title &nbsp;<i class="fa fa-sort-alpha-asc" aria-hidden="true"></i>
+          </th>
+          <th scope="col" (click)="sortByStatus()">Status &nbsp;
+            <i class="fa fa-sort-alpha-asc" aria-hidden="true"></i>
+          </th>
+          <th scope="col" (click)="sortByReporter()">Reporter &nbsp;<i class="fa fa-sort-alpha-asc"
+              aria-hidden="true"></i>
+          </th>
+          <th scope="col" (click)="sortByDate()">Date &nbsp;<i class="fa fa-sort-alpha-asc" aria-hidden="true"></i>
+          </th>
         </tr>
       </thead>
       <tbody>
 
         <tr *ngFor="let issue of issueInfo | paginate: { itemsPerPage: 5, currentPage: page } ">
-          <!-- {{issue.issueId}} -->
+
           <th scope="row" (click)="show(issue.issueId)">{{issue.title}}</th>
           <td>{{issue.status}}</td>
           <td>{{issue.reporterName}}</td>
-          <td>{{issue.creationDateString}}</td>
+          <td>{{issue.creationDate | displayDate}}</td>
         </tr>
 
       </tbody>
     </table>
   </div>
   <pagination-controls (pageChange)="page = $event"></pagination-controls>
+</div>
+
+<div class="container" [hidden]="notifyFlag==false">
+  <div class="card border-success mb-3" *ngFor="let notifications of notify" (click)="goToIssue(notifications.issueId)">
+    <div class="card-body text-success">
+
+      <p class="card-text">{{notifications.msg}}</p>
+    </div>
+    <div class="card-footer bg-transparent border-success">On {{notifications.creationDate | displayDate}}</div>
+  </div>
 </div>
