--- a/frontend/issueTracker/src/app/user/signup/signup.component.html
+++ b/frontend/issueTracker/src/app/user/signup/signup.component.html
@@ -21,12 +21,14 @@
 
         <div class="form-group">
             <label for="Username">Username</label>
-            <input type="email" id="name" class="form-control" name="name" placeholder="Enter your username ." [(ngModel)]="username" autofocus required>
+            <input type="email" id="name" class="form-control" name="name" placeholder="Enter your username ."
+                [(ngModel)]="username" autofocus required>
         </div>
 
         <div class="form-group">
             <label for="Email">Email</label>
-            <input type="email" id="email" class="form-control" name="email" placeholder="Enter your email id." [(ngModel)]="email" autofocus required>
+            <input type="email" id="email" class="form-control" name="email" placeholder="Enter your email id."
+                [(ngModel)]="email" autofocus required>
         </div>
 
         <div class="form-group">
@@ -35,9 +37,7 @@
         </div>
 
         <button type="submit" class="btn btn-success btn-lg btn-block">Sign In</button>
-        
-    </form>
-    
-</div>
 
-<!-- (click)="loginViaFb()" -->
+    </form>
+
+</div>
